src/components/CharacterEditor/CharacterEditor.module.css
.characterEditor {
  padding-top: 128px;
  padding-bottom: 64px;
}

.maxWidthWrapper {
}

.grayBackground {
  background-color: hsl(195deg, 20%, 86%);
  height: 40%;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
}

.header {
  padding-bottom: 64px;
  width: 65%;
}

.title {
  font-size: 2.5rem;
  font-weight: 600;
  margin-top: 0;
  margin-bottom: 16px;
  letter-spacing: -0.5px;
}

.description {
  font-size: 1.25rem;
  margin: 0;
}

.characterWrapper {
  min-height: 500px;
  position: fixed;
  right: 0;
  width: 35%;
  bottom: 0;
}

.character {
  height: 100%;
}

.controlColumn {
  width: 50%;
  isolation: isolate;
}

